cmake_minimum_required(VERSION 3.17)
project(Accleratedcpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(Accleratedcpp "organize program_data/original/pmain.cpp" "Hello World.cpp" chars.cpp "loop and count.cpp" "use batch data.cpp" "organize program_data/original/grade.h" "organize program_data/original/Student_info.h" "organize program_data/original/Student_info_funcs.cpp" "organize program_data/original/median_funcs.cpp" "organize program_data/original/median.h" "organize program_data/original/grade_funcs.cpp" main.cpp "organize program_data/memOptim/main.cpp" "organize program_data/memOptim/grade.h" "organize program_data/memOptim/grade_funcs.cpp" "organize program_data/memOptim/Student_info.h" "organize program_data/memOptim/Student_info_funcs.cpp" "organize program_data/main.cpp")